src/test/deca/context/invalid/our_tests/jb-wrong-selection.deca
// Description:
//    Invalid Selection
//
// Resultats:
//    Should throw Contextual error (rule 3.65)
//
// Historique:
//    cree le 22/01/2017

{
    1.x;
    null.x;
    false.x;
}
